_sass/_offer.scss
$big_card_width: 30vw;

.offer_page {
  ul {
    margin-left: 5px;
    max-width: 300px;
    margin: $spacing_unit/2 auto $spacing_unit auto;
  }

  .product_grid {
    @extend %clearfix;
    position: relative;
    display: block;
    min-height: 100vh;
    @include media( "screen", ">bp1Width") {
      min-height: 50vh;
    }
    min-width: $big_card_width;
    width: 90vw;
    margin: -20vh 5vw 0;
  }

  .selling_points {
    font-size: 15px;
    margin-bottom: $spacing_unit;
  }
}

.card {
  cursor: pointer;
  border-radius: 4px;
  display: block;
  position: relative;
  width: 90%;
  min-width: 90%;
  max-width: 90%;
  margin: 0 auto;

  padding: $spacing_unit/2 0;
  background-color: hsla(0, 0%, 95%, 1);


  @include media( "screen", ">maxWidth") {
    display: inline-block;
    position: absolute;
    margin: 0;
    min-width: $big_card_width;
    max-width: $big_card_width;
  }


  p {
    margin-left: $spacing_unit/2;
    margin-right: $spacing_unit/2;
  }

  &:nth-child(1) {
    left: -1.75rem;
    z-index: 1;
    margin-top: 5rem;
    margin-bottom: 5rem;
    @include media( "screen", ">maxWidth") {
      margin-top:0;
      margin-bottom: 0;
    }

    // &.is_selected,
    &:hover {
      z-index: 10;
      transform: scale(1.2);
      background-color: hsla(0, 0%, 95%, 1);
    }
  }

  &:nth-child(2) {
    z-index: 3;
    transform: scale(1.15);
    left: 0;
    max-width: 80%;
    padding: 2rem 1rem;
    margin-top: 5rem;
    margin-bottom: 5rem;

    @include media( "screen", ">maxWidth") {
      padding: 0;
      margin: 0;
      max-width: 10%;
      left: calc(50% - 15vw);
      min-width: $big_card_width;
    }

    &.is_selected,
    &:hover {
      z-index: 10;
      transform: scale(1.2);
      background-color: hsla(0, 0%, 95%, 1);
    }
  }

  &:nth-child(3) {
    right: -1.75rem;
    z-index: 2;
    transform: translateY(-1rem);
    margin-top: 5rem;
    margin-bottom: 5rem;
    @include media( "screen", ">maxWidth") {
      margin-top:0;
      margin-bottom: 0;
    }

    &.is_selected,
    &:hover {
      z-index: 10;
      transform: scale(1.2);
      background-color: hsla(0, 0%, 95%, 1);
    }
  }

}

.full_card_is_selected .card.is_selected,
.custom_card_is_selected .card.is_selected,
.landing_card_is_selected .card.is_selected {
  z-index: 10;
  transform: scale(1.15);
  -webkit-box-shadow: $card-shadow--hover;
  box-shadow: $card-shadow--hover;
  background-color: hsla(0, 0%, 100%, 1);
}

.checkmark {
  display: inline-block;
  height: 100%;
  width: 100%;
}

.checkmark:before {
  content: '';
  display: inline-block;
  width: 3px;
  height: 6px;
  border: solid limegreen;
  border-width: 0 2px 2px 0;
  transform: rotate(45deg);
  padding-right: 8px;
  padding-bottom: 10px;
  margin-right: 16px;
}

